--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "postcss-nesting": "^12.0.2",
+    "react-router-dom": "^6.22.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.0"
   }
